[project]
name = "AlgoritmosDespacho"
version = "0.1.0"
description = "Algoritmos de despacho con visualizaci칩n en Tkinter y gr치ficas"
authors = [{ name = "Samuel Herrera", email = "samuel.herrera@utp.edu.co" }]
dependencies = [
    "customtkinter",
    "pygame",
    "opencv-python",  # cv2 viene dentro de este paquete
    "numpy",
    "matplotlib",
    "CTkMessagebox",
    "pillow",         # PIL en pip es Pillow
    "pandas",
    "plotly",         # Incluye plotly.io y plotly.express
    "kaleido",       # Para exportar gr치ficas de plotly a im치genes
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
